src/components/editTags/EditTags.css
.remove-tags-inner{
    background-color: white;
    border-radius: 20px;
    padding: 20px;
    margin-top: 40px;
}
.expense-tag-field{
    margin: 15px 0;
    
}
.expense-tag-field  input {
    border: none;
    background-color: rgba(255,61,96,.18);
    padding: 6px 8px;
    border-radius: 4px;
    font-weight: 500;
    color: var(--bs-danger) !important;
}
.expense-tag-field  input:focus{
    outline-offset: 4px;
    outline: 2px solid var(--bs-danger);
}

@media (min-width : 786px ) and ( max-width : 991.8px) {
    
    .expense-tag-field-parent{
        display: grid;
        grid-template-columns: 1fr 1fr;
        gap: 40px;
    }

    .expense-tag-field-parent .expense-tag-field {
        display: grid !important;
        grid-template-columns: 60% 40%;
    }

}

@media ( max-width : 785.8px )
{
    .expense-tag-field{
        display: grid !important;
        grid-template-columns: 60% 40%;
    }
    .expense-tag-field .icons{
        margin-left: 10px !important;
    }
}

